--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -8,7 +8,7 @@ on:
   #   branches:
   #     - master
   schedule:
-    - cron: 42 22 * * *
+    - cron: 42 0/12 * * *
   watch:
     types: started
     
